[package]
name = "miclow"
version = "0.1.0"
edition = "2021"
authors = ["sugipamo <sugipamo@gmail.com>"]
description = "Miclow - A lightweight orchestration system for asynchronous task execution"
repository = "https://github.com/sugipamo/miclow"
license = "MIT OR Apache-2.0"
keywords = ["orchestration", "async", "task", "execution", "lightweight"]
categories = ["asynchronous", "command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
petgraph = "0.6"
sled = "0.34"
sha2 = "0.10"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
wait-timeout = "0.2.1"
uuid = { version = "1.18.1", features = ["v4", "v7", "serde"] }
strum = "0.27.2"
strum_macros = "0.27.2"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
] }
shared_memory = "0.12"
async-trait = "0.1"
toml = "0.8"
which = "6.0"
futures = "0.3"
nix = { version = "0.28", features = ["process", "signal"] }
regex = "1.10"
rmcp = { version = "0.8.5", default-features = false, features = [
    "base64",
    "macros",
    "server",
    "client",
    "transport-child-process",
] }

[dev-dependencies]
tempfile = "3.0"

[patch.crates-io]
darling = { git = "https://github.com/TedDriggs/darling", tag = "v0.21.3" }
darling_core = { git = "https://github.com/TedDriggs/darling", tag = "v0.21.3", package = "darling_core" }
darling_macro = { git = "https://github.com/TedDriggs/darling", tag = "v0.21.3", package = "darling_macro" }
